kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - kibana.domain.com
    secretName: kibana-tls-secret
  rules:
    - host: kibana.domain.com
      http:
        paths:
        - path: /
          backend:
            serviceName: kibana-kibana
            servicePort: 5601
